# DailyTraining

./: CMakeLists.txt  README.md
src/day1/: text1.cpp
src/day2/: text1.cpp  text2.cpp  text3.cpp  text4.cpp
src/day3/: text1.cpp  text2.cpp  text3.cpp  text4.cpp  text5.cpp  text6.cpp
src/day4/: text1.cpp  text2.cpp  text3.cpp  text4.cpp  text5.cpp  text5.h  text6.cpp  text7.cpp
src/day5/: text1.cpp  text1.md  text2.cpp  text3.cpp  text4.cpp  text5.cpp  text6.cpp  text7.cpp
src/main/: main.cpp
