cmake_minimum_required(VERSION 3.17)
project(DailyTraining)

set(CMAKE_CXX_STANDARD 14)

add_executable(DailyTraining src/main/main.cpp)
add_executable(Day1Text1 src/day1/text1.cpp)
add_executable(Day2Text1 src/day2/text1.cpp)
add_executable(Day2Text2 src/day2/text2.cpp)
add_executable(Day2Text3 src/day2/text3.cpp)
add_executable(Day2Text4 src/day2/text4.cpp)