cmake_minimum_required(VERSION 3.17)
project(DailyTraining)

set(CMAKE_CXX_STANDARD 14)

add_executable(DailyTraining src/main/main.cpp)
add_executable(Day1Text1 src/day1/text1.cpp)
add_executable(Day2Text1 src/day2/text1.cpp)
add_executable(Day2Text2 src/day2/text2.cpp)
add_executable(Day2Text3 src/day2/text3.cpp)
add_executable(Day2Text4 src/day2/text4.cpp)
add_executable(Day3Text1 src/day3/text1.cpp)
add_executable(Day3Text2 src/day3/text2.cpp)
add_executable(Day3Text3 src/day3/text3.cpp)
add_executable(Day3Text4 src/day3/text4.cpp)
add_executable(Day3Text5 src/day3/text5.cpp)
add_executable(Day3Text6 src/day3/text6.cpp)
add_executable(Day4Text1 src/day4/text1.cpp)