cmake_minimum_required(VERSION 3.17)
project(DailyTraining)

set(CMAKE_CXX_STANDARD 14)

add_executable(DailyTraining src/main/main.cpp)
add_executable(Day1Text1 src/day1/text1.cpp)
add_executable(Day2Text1 src/day2/text1.cpp)
add_executable(Day2Text2 src/day2/text2.cpp)
add_executable(Day2Text3 src/day2/text3.cpp)
add_executable(Day2Text4 src/day2/text4.cpp)
add_executable(Day3Text1 src/day3/text1.cpp)
add_executable(Day3Text2 src/day3/text2.cpp)
add_executable(Day3Text3 src/day3/text3.cpp)
add_executable(Day3Text4 src/day3/text4.cpp)
add_executable(Day3Text5 src/day3/text5.cpp)
add_executable(Day3Text6 src/day3/text6.cpp)
add_executable(Day4Text1 src/day4/text1.cpp)
add_executable(Day4Text2 src/day4/text2.cpp)
add_executable(Day4Text3 src/day4/text3.cpp)
add_executable(Day4Text4 src/day4/text4.cpp)
add_executable(Day4Text5 src/day4/text5.h src/day4/text5.cpp)
add_executable(Day4Text6 src/day4/text6.cpp)
add_executable(Day4Text7 src/day4/text7.cpp)
add_executable(Day5Text1 src/day5/text1.cpp)
add_executable(Day5Text2 src/day5/text2.cpp)
add_executable(Day5Text3 src/day5/text3.cpp)